--- a/build.gradle
+++ b/build.gradle
@@ -42,17 +42,22 @@ repositories {
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-jooq"
     implementation "org.jooq:jooq:${jooqVersion}"
-    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.jooq:jooq-kotlin:${jooqVersion}"
+    implementation "org.jooq:jooq-kotlin-coroutines:${jooqVersion}"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     implementation "org.flywaydb:flyway-core"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0"
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation "org.testcontainers:junit-jupiter"
     testImplementation "org.springframework.boot:spring-boot-testcontainers"
     testImplementation "org.testcontainers:postgresql"
+    testImplementation 'io.projectreactor:reactor-test'
     developmentOnly "org.springframework.boot:spring-boot-docker-compose"
     runtimeOnly "org.postgresql:postgresql"
+    runtimeOnly "org.postgresql:r2dbc-postgresql"
+    runtimeOnly "io.r2dbc:r2dbc-pool:1.0.1.RELEASE"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     jooqCodegen "org.postgresql:postgresql"
     jooqCodegen "org.jooq:jooq:${jooqVersion}"
@@ -61,6 +66,9 @@ dependencies {
     jooqCodegen "co.uzzu.dotenv:gradle:4.0.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test"
     testImplementation "org.mockito.kotlin:mockito-kotlin:5.3.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.0"
+    testImplementation "io.mockk:mockk:1.12.0"
 }
 
 apply plugin: "co.uzzu.dotenv.gradle"
@@ -210,5 +218,6 @@ openApiGenerate {
         dateLibrary: "java8" ,
         useSpringBoot3: "true",
         interfaceOnly: "true",
+        reactive: "true",
     ])
 }
