--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bookmanagement
 logging.level.org.jooq=debug
-spring.r2dbc.url=rdbc:postgresql://localhost:15432/mydatabase"
+spring.r2dbc.url=r2dbc:postgresql://localhost:15432/mydatabase"
 spring.r2dbc.username=myuser
 spring.r2dbc.password=secret
 spring.r2dbc.pool.enabled=true
