--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ org-mockito-kotlin-mockito-kotlin = "5.4.0"
 org-jetbrains-kotlinx-kotlinx-coroutines-core = "1.10.2"
 org-jetbrains-kotlinx-kotlinx-coroutines-test = "1.10.2"
 io-mockk-mockk = "1.14.0"
+org-postgresql-postgresql = "42.7.5"
 
 [libraries]
 org-flywaydb-flyway-database-postgresql = { group = "org.flywaydb", name = "flyway-database-postgresql", version.ref = "flyway" }
@@ -41,7 +42,7 @@ org-springframework-boot-spring-boot-testcontainers = { group = "org.springframe
 org-testcontainers-postgresql = { group = "org.testcontainers", name = "postgresql" }
 io-projectreactor-reactor-test = { group = "io.projectreactor", name = "reactor-test" }
 org-springframework-boot-spring-boot-docker-compose = { group = "org.springframework.boot", name = "spring-boot-docker-compose" }
-org-postgresql-postgresql = { group = "org.postgresql", name = "postgresql" }
+org-postgresql-postgresql = { group = "org.postgresql", name = "postgresql", version.ref="org-postgresql-postgresql" }
 org-postgresql-r2dbc-postgresql = { group = "org.postgresql", name = "r2dbc-postgresql" }
 org-springframework-boot-spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test" }
 org-jetbrains-kotlin-kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test" }
