--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,38 +13,47 @@ jobs:
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+    strategy:
+      matrix:
+        distribution: ["temurin"]
+        java-version: ["21", "24"]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Java version
+        env:
+          JAVA_VERSION: ${{ matrix.java-version }}
+        run: echo $JAVA_VERSION
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
-      with:
-        distribution: 'temurin'
-        java-version: '21'
-        cache: 'gradle'
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-    - name: Start docker container
-      env:
-        TZ: "Asia/Tokyo"
-      run: docker compose up -d
+      - name: Set up JDK ${{ matrix.distribution }} ${{ matrix.java-version }}
+        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
+        with:
+          distribution: ${{ matrix.distribution }}
+          java-version: ${{ matrix.java-version }}
+          cache: 'gradle'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@06832c7b30a0129d7fb559bcc6e43d26f6374244 # v4.3.1
+      - name: Start docker container
+        env:
+          TZ: "Asia/Tokyo"
+        run: docker compose up -d
 
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@06832c7b30a0129d7fb559bcc6e43d26f6374244 # v4.3.1
 
-    - name: create table on database
-      env:
-        TZ: "Asia/Tokyo"
-      run: ./gradlew flywayMigrate
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
-    - name: execute jOOQ code generator
-      run: ./gradlew jooqCodegen
+      - name: create table on database
+        env:
+          TZ: "Asia/Tokyo"
+        run: ./gradlew flywayMigrate
 
-    - name: execute OpenAPI code generator
-      run: ./gradlew openApiGenerate
+      - name: execute jOOQ code generator
+        run: ./gradlew jooqCodegen
 
-    - name: Check
-      run: ./gradlew check
+      - name: execute OpenAPI code generator
+        run: ./gradlew openApiGenerate
+
+      - name: Check
+        run: ./gradlew check
